tsr-docusign/main/default/objects/Docusign_Access_Token__c/Docusign_Access_Token__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores docusign access token</description>
    <label>Docusign Access Tokens</label>
</CustomObject>