tsr-docusign/main/default/objects/Docusign_Access_Token__c/fields/Access_Token_Part1__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_Part1__c</fullName>
    <description>Access Token Part 1</description>
    <inlineHelpText>Access Token Part 1</inlineHelpText>
    <label>Access Token Part 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>