tsr-docusign/main/default/objects/Docusign_Access_Token__c/fields/Access_Token_Part2__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_Part2__c</fullName>
    <description>Access Token Part 2</description>
    <inlineHelpText>Access Token Part 2</inlineHelpText>
    <label>Access Token Part 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>