tsr-docusign/main/default/objects/Docusign_Access_Token__c/fields/Access_Token_Part3__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_Part3__c</fullName>
    <description>Access Token Part 3</description>
    <inlineHelpText>Access Token Part 3</inlineHelpText>
    <label>Access Token Part 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>