tsr-docusign/main/default/objects/Docusign_Access_Token__c/fields/Base_Uri__c.field-meta.xml
<CustomField>
    <fullName>Base_Uri__c</fullName>
    <description>Base Uri</description>
    <inlineHelpText>Base Uri</inlineHelpText>
    <label>Base Uri</label>
    <type>Url</type>
</CustomField>