tsr-docusign/main/default/objects/Docusign_Access_Token__c/fields/Expiry_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Expiry_DateTime__c</fullName>
    <description>Expiry DateTime</description>
    <inlineHelpText>Expiry DateTime</inlineHelpText>
    <label>Expiry DateTime</label>
    <type>DateTime</type>
</CustomField>